* enabled HandlerMethod-based infrastructure through the mvc namespace and Java-based configuration
* support for automatically adding @PathVariables to the model
* support for including @PathVariables in data binding
* support for URI template variables in view names with the "redirect:" prefix
* added a flag for extracting the value from single-key models in MappingJacksonJsonView
* allow bean references in mvc:interceptor namespace elements
* consolidated the initialization and use of MappedInterceptors in AbstractHandlerMapping
* added Servlet 3.0 based WebApplicationInitializer mechanism for programmatic bootstrapping
* added Servlet 3.0 based StandardServletMultipartResolver
* AnnotatedBeanDefinitionReader now inherits Environment of supplied BeanDefinitionRegistry
* fixed JPA 2.0 timeout hints to correctly specify milliseconds
* RemoteExporter uses an opaque proxy for 'serviceInterface' (no AOP interfaces exposed)
* updated Quartz package to support Quartz 1.8 as well (note: not fully supporting Quartz 2.0 yet)
* introduced AnnotationConfigContextLoader to provide TestContext support for @Configuration classes
* deprecated AbstractJUnit38SpringContextTests and AbstractTransactionalJUnit38SpringContextTests


Changes in version 3.1 M1 (2011-02-11)
--------------------------------------

* upgraded to JUnit 4.8.1 and TestNG 5.12.1
* fixed aspects bundle to declare dependencies for @Async aspect as well
* introduced Environment abstraction with flexible placeholder resolution
* introduced support for environment profiles in XML bean definition files
* introduced @Profile annotation for configuration classes and individual component classes
* introduced PropertySourcesPlaceholderConfigurer as alternative to PropertyPlaceholderConfigurer
* introduced "c:" namespace for constructor argument shortcuts (analogous to the "p:" namespace)
* introduced @FeatureConfiguration classes with @Feature methods that return FeatureSpecifications